--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <tbody>
                 <tr>
                     <td style="width: 148px;">Bowel</td>
-                    <td>
-<a href="#case_1">🍞</a><a href="#bowel_1">🟢</a>
-</td>
+                    <td><a href="#bowel_1">🍞🟢</a></td>
                     <td><a href="#bowel_2">🦓🟢</a></td>
                     <td><a href="#bowel_3">🩻🟠</a></td>
                     <td></td>
